<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.etask.MainActivity">

    <ImageView
        android:id="@+id/formFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="206dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="206dp"
        android:src="@drawable/primarymenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textFormTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/shareForm"
        android:textAlignment="center"
        android:textSize="30sp"
        android:fontFamily="@font/lato"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/formFrame"
        app:layout_constraintStart_toStartOf="@id/formFrame"
        app:layout_constraintTop_toTopOf="@id/formFrame"
        app:layout_constraintBottom_toTopOf="@id/btnShareApp"

        />

    <ImageView
        android:id="@+id/btnShareApp"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toTopOf="@id/textFormsubtitle"
        app:layout_constraintEnd_toEndOf="@id/formFrame"
        app:layout_constraintStart_toStartOf="@id/formFrame"
        app:layout_constraintTop_toBottomOf="@id/textFormTitle"
        app:srcCompat="@drawable/button"
        />


    <TextView
        android:id="@+id/tvShareApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sharetoApp"
        android:textSize="18sp"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toBottomOf="@+id/btnShareApp"
        app:layout_constraintStart_toStartOf="@+id/btnShareApp"
        app:layout_constraintEnd_toStartOf="@id/iconShare"
        app:layout_constraintTop_toTopOf="@+id/btnShareApp" />

    <ImageView
        android:id="@+id/iconShare"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_compartir"
        app:layout_constraintEnd_toEndOf="@id/btnShareApp"
        app:layout_constraintStart_toEndOf="@id/tvShareApp"
        app:layout_constraintTop_toTopOf="@id/btnShareApp"
        app:layout_constraintBottom_toBottomOf="@id/btnShareApp"/>

    <TextView
        android:id="@+id/textFormsubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/orSearchFriend"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="@font/poppins"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="@id/formFrame"
        app:layout_constraintStart_toStartOf="@id/formFrame"
        app:layout_constraintTop_toBottomOf="@id/btnShareApp"
        app:layout_constraintBottom_toTopOf="@id/searcher"
        />

    <AutoCompleteTextView
        android:id="@+id/searcher"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/textFormsubtitle"
        app:layout_constraintBottom_toTopOf="@id/btnDesign"
        app:layout_constraintEnd_toEndOf="@id/formFrame"
        app:layout_constraintStart_toStartOf="@id/formFrame"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:hint="@string/searchUser"
        android:completionThreshold="1"
        android:completionHint="@string/searchUser"
        android:background="#fbf5f3"/>


    <ImageView
        android:id="@+id/btnDesign"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toBottomOf="@id/formFrame"
        app:layout_constraintEnd_toEndOf="@id/formFrame"
        app:layout_constraintStart_toStartOf="@id/formFrame"
        app:layout_constraintTop_toBottomOf="@id/searcher"
        app:srcCompat="@drawable/button"
        />


    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendToFriend"
        android:textSize="18sp"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toBottomOf="@+id/btnDesign"
        app:layout_constraintStart_toStartOf="@+id/btnDesign"
        app:layout_constraintEnd_toEndOf="@id/btnDesign"
        app:layout_constraintTop_toTopOf="@+id/btnDesign" />



</androidx.constraintlayout.widget.ConstraintLayout>