<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.etask.MainActivity">

    <ImageView
        android:id="@+id/formFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="236dp"
        android:src="@drawable/primarymenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textFormTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/sureOfDelete"
        android:textAlignment="center"
        android:textSize="30sp"
        android:fontFamily="@font/lato"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/formFrame"
        app:layout_constraintStart_toStartOf="@id/formFrame"
        app:layout_constraintTop_toTopOf="@id/formFrame"
        app:layout_constraintBottom_toTopOf="@id/textFormsubtitle"
        />


    <TextView
        android:id="@+id/textFormsubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/cantBeReversed"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="@font/poppins"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="@id/formFrame"
        app:layout_constraintStart_toStartOf="@id/formFrame"
        app:layout_constraintTop_toBottomOf="@id/textFormTitle"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        />



    <ImageView
        android:id="@+id/btnCancel"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="@id/formFrame"
        app:layout_constraintEnd_toEndOf="@id/formFrame"
        app:layout_constraintStart_toEndOf="@id/btnDelete"
        app:layout_constraintTop_toBottomOf="@id/textFormsubtitle"
        app:srcCompat="@drawable/button"
        />

    <ImageView
        android:id="@+id/btnDelete"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="@id/formFrame"
        app:layout_constraintEnd_toStartOf="@id/btnCancel"
        app:layout_constraintStart_toStartOf="@id/formFrame"
        app:layout_constraintTop_toBottomOf="@id/textFormsubtitle"
        app:srcCompat="@drawable/resaltado"
        />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="18sp"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toBottomOf="@+id/btnCancel"
        app:layout_constraintStart_toStartOf="@+id/btnCancel"
        app:layout_constraintEnd_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toTopOf="@+id/btnCancel" />

    <TextView
        android:id="@+id/tvDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteTask"
        android:textSize="18sp"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toBottomOf="@+id/btnDelete"
        app:layout_constraintStart_toStartOf="@+id/btnDelete"
        app:layout_constraintEnd_toEndOf="@id/btnDelete"
        app:layout_constraintTop_toTopOf="@+id/btnDelete" />

</androidx.constraintlayout.widget.ConstraintLayout>