<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/primarymenu"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_marginVertical="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enterAsGuest"
                android:fontFamily="@font/lato"
                android:textSize="40dp"
                android:textStyle="bold">
            </TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_account_circle_24"
                android:layout_marginBottom="20dp">
            </ImageView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center">
                <EditText
                    android:textSize="20dp"
                    android:paddingLeft="20dp"
                    android:paddingVertical="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:drawableStart="@drawable/ic_user"
                    android:layout_height="wrap_content"
                    android:hint="@string/guestUname"
                    android:background="@drawable/form_shape">
                </EditText>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/rememberMe"
                    android:textSize="16dp"
                    android:fontFamily="@font/lato"
                    android:textStyle="bold"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    >

                    <ImageView
                        android:id="@+id/userInfoFrame"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:src="@drawable/button"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_alignStart="@+id/userInfoFrame"
                        android:layout_alignTop="@+id/userInfoFrame"
                        android:layout_alignEnd="@+id/userInfoFrame"
                        android:layout_alignBottom="@+id/userInfoFrame"
                        android:layout_marginStart="54dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="62dp"
                        android:layout_marginBottom="9dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/logInGuested"
                        android:textAlignment="center"
                        android:textSize="17dp" />


                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>