<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/voiceLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/primarymenu"
    tools:context="com.example.etask.MainActivity">

    <ImageView
        android:id="@+id/formFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="96dp"
        android:src="@drawable/primarymenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textFormTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/titleVoiceForm"
        android:textAlignment="center"
        android:textSize="30sp"
        android:fontFamily="@font/lato"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/formFrame"
        app:layout_constraintStart_toStartOf="@id/formFrame"
        app:layout_constraintTop_toTopOf="@id/formFrame"
        app:layout_constraintBottom_toTopOf="@id/editTitleTextTitle"
        />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTitleTextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopStart="30dp"
        android:textColorHint="?attr/colorOnPrimary"
        app:errorEnabled="true"
        app:helperText="@string/required"
        app:helperTextEnabled="true"
        app:hintTextColor="?attr/colorOnPrimary"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_microfono"
        app:endIconTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="@id/formFrame"
        app:layout_constraintStart_toStartOf="@id/formFrame"
        app:layout_constraintTop_toBottomOf="@id/textFormTitle"
        app:layout_constraintBottom_toTopOf="@id/editTitleTextDescription">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/uploadTitle"
            android:inputType="textPersonName"
            android:textSize="15dp"
            android:fontFamily="@font/poppins"
            app:backgroundTint="#fbf5f3" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTitleTextDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopStart="30dp"
        android:textColorHint="?attr/colorOnPrimary"
        app:errorEnabled="true"
        app:helperText="@string/required"
        app:helperTextEnabled="true"
        app:hintTextColor="?attr/colorOnPrimary"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_microfono"
        app:endIconTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="@id/formFrame"
        app:layout_constraintStart_toStartOf="@id/formFrame"
        app:layout_constraintTop_toBottomOf="@id/editTitleTextTitle"
        app:layout_constraintBottom_toTopOf="@id/editTitleTextInicio">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/uploadDescription"
            android:inputType="textPersonName"
            android:textSize="15dp"
            android:fontFamily="@font/poppins"
            app:backgroundTint="#fbf5f3" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTitleTextInicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopStart="30dp"
        android:textColorHint="?attr/colorOnPrimary"
        app:errorEnabled="true"
        app:helperText="@string/required"
        app:helperTextEnabled="true"
        app:hintTextColor="?attr/colorOnPrimary"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_microfono"
        app:endIconTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="@id/formFrame"
        app:layout_constraintStart_toStartOf="@id/formFrame"
        app:layout_constraintTop_toBottomOf="@id/editTitleTextDescription"
        app:layout_constraintBottom_toTopOf="@id/editTitleTextFin">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/uploadDateStart"
            android:inputType="textPersonName"
            android:textSize="15dp"
            android:fontFamily="@font/poppins"
            app:backgroundTint="#fbf5f3" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTitleTextFin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopStart="30dp"
        android:textColorHint="?attr/colorOnPrimary"
        app:errorEnabled="true"
        app:helperText="@string/required"
        app:helperTextEnabled="true"
        app:hintTextColor="?attr/colorOnPrimary"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_microfono"
        app:endIconTint="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="@id/formFrame"
        app:layout_constraintStart_toStartOf="@id/formFrame"
        app:layout_constraintTop_toBottomOf="@id/editTitleTextInicio"
        app:layout_constraintBottom_toTopOf="@id/btnSendVoiceTask">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/uploadDateEnd"
            android:inputType="textPersonName"
            android:textSize="15dp"
            android:fontFamily="@font/poppins"
            app:backgroundTint="#fbf5f3" />

    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/btnSendVoiceTask"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="@id/formFrame"
        app:layout_constraintEnd_toEndOf="@id/formFrame"
        app:layout_constraintStart_toStartOf="@id/formFrame"
        app:layout_constraintTop_toBottomOf="@id/editTitleTextFin"
        app:srcCompat="@drawable/button"
        />

    <TextView
        android:id="@+id/tvSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendData"
        android:textSize="18sp"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toBottomOf="@+id/btnSendVoiceTask"
        app:layout_constraintStart_toStartOf="@+id/btnSendVoiceTask"
        app:layout_constraintEnd_toEndOf="@id/btnSendVoiceTask"
        app:layout_constraintTop_toTopOf="@+id/btnSendVoiceTask" />

</androidx.constraintlayout.widget.ConstraintLayout>